source/tests/errors/variable_not_defined.apex
import os
os.output(undefined_var)